--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
+*.env
+
 # dependencies
 node_modules/
 
@@ -36,4 +38,3 @@ yarn-error.*
 *.tsbuildinfo
 
 #Key
-.env
