--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
+# Ignore all environment files
+.env
+.env.*
 *.env
+*.env.local
 
 # dependencies
 node_modules/
@@ -31,11 +35,5 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
-.env*.local
-
 # typescript
 *.tsbuildinfo
-
-#Key
-.env
